Add active learning

--- a/Active_learning.ipynb
+++ b/Active_learning.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "aae07d7e",
+   "execution_count": 38,
+   "id": "851b5c42",
    "metadata": {},
    "outputs": [
     {
@@ -31,8 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "79f6abd9",
+   "execution_count": 39,
+   "id": "29ec0753",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "2eb93874",
+   "execution_count": 40,
+   "id": "dfb19bdf",
    "metadata": {},
    "outputs": [
     {
@@ -82,8 +82,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "fb14540f",
+   "execution_count": 41,
+   "id": "aa38ea71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,8 +135,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "608af57d",
+   "execution_count": 42,
+   "id": "8262b554",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,8 +173,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "d12c7d7f",
+   "execution_count": 43,
+   "id": "9e02ee9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
     "pool_idx = [i for i in range(len(df)) if i not in initial_idx]\n",
     "\n",
     "X = df.iloc[:, 5:].values  # Assuming descriptors start from the 5th column\n",
-    "y = df['pH2'].values\n",
+    "y = df['delta_H'].values\n",
     "\n",
     "X_initial = X[initial_idx]\n",
     "y_initial = y[initial_idx]\n",
@@ -217,31 +217,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "4cf6118a",
+   "execution_count": null,
+   "id": "bfa454df",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration 1/10 complete. Training set size: 1170\n",
-      "Iteration 2/10 complete. Training set size: 1270\n",
-      "Iteration 3/10 complete. Training set size: 1370\n",
-      "Iteration 4/10 complete. Training set size: 1470\n",
-      "Iteration 5/10 complete. Training set size: 1570\n",
-      "Iteration 6/10 complete. Training set size: 1670\n",
-      "Iteration 7/10 complete. Training set size: 1770\n",
-      "Iteration 8/10 complete. Training set size: 1870\n",
-      "Iteration 9/10 complete. Training set size: 1970\n",
-      "Iteration 10/10 complete. Training set size: 2070\n",
-      "Active learning process complete!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "n_iterations = 10  # You can change this to any desired number\n",
-    "n_to_add_each_iter = 100  # Number of points to add from the pool to training set in each iteration\n",
+    "n_iterations = 20  # You can change this to any desired number\n",
+    "n_to_add_each_iter = 500  # Number of points to add from the pool to training set in each iteration\n",
     "\n",
     "for i in range(n_iterations):\n",
     "    # Train Gaussian Process on current training data\n",
@@ -269,14 +251,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "07ee1f54",
+   "execution_count": 57,
+   "id": "bd9263be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted Hydrogenation Enthalpy (kJ/mol H2) for the new molecule: -73.11803639174408\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/hassan/opt/anaconda3/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Cc1cc2ccccc2o1\n",
     "\n",
-    "new_molecule_smiles = \"Cc1cc2ccccc2o1\"  # Replace with your SMILES string\n",
+    "new_molecule_smiles = \"Cc1ccccc1Cc1ccncc1\"  # Replace with your SMILES string\n",
     "\n",
     "# Convert to RDKit mol object\n",
     "new_mol = Chem.MolFromSmiles(new_molecule_smiles)\n",
@@ -288,38 +286,11 @@
     "    raise ValueError(\"Invalid SMILES string or molecule conversion failed.\")\n",
     "\n",
     "# Convert descriptors to a numpy array and reshape for single sample prediction\n",
-    "new_molecule_descriptors = np.array(new_molecule_descriptors).reshape(1, -1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "bd2fd8b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "new_molecule_descriptors = np.array(new_molecule_descriptors).reshape(1, -1)\n",
+    "\n",
     "# Splitting the data into training and test sets\n",
-    "train_data, test_data = train_test_split(df, test_size=0.1, random_state=42)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "81ade160",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "StandardScaler()"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "train_data, test_data = train_test_split(df, test_size=0.1, random_state=42)\n",
+    "\n",
     "# List of descriptor columns (you've defined these when you computed descriptors)\n",
     "descriptor_cols = [\n",
     "    'mol_sssr', 'clogp', 'mr', 'mw', 'tpsa', 'Chi0n', 'Chi1n', 'Chi2n', 'Chi3n', 'Chi4n', \n",
@@ -335,43 +306,11 @@
     "scaler = StandardScaler()\n",
     "\n",
     "# Fit the scaler on the training data descriptors\n",
-    "scaler.fit(train_data[descriptor_cols])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "19c8b8f7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/hassan/opt/anaconda3/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "new_molecule_descriptors_scaled = scaler.transform(new_molecule_descriptors)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "ecf4b02d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted Hydrogenation Enthalpy (kJ/mol H2) for the new molecule: 17.554482797818913\n"
-     ]
-    }
-   ],
-   "source": [
+    "scaler.fit(train_data[descriptor_cols])\n",
+    "\n",
+    "new_molecule_descriptors_scaled = scaler.transform(new_molecule_descriptors)\n",
+    "\n",
+    "\n",
     "predicted_delta_H = gp.predict(new_molecule_descriptors_scaled)\n",
     "print(f\"Predicted Hydrogenation Enthalpy (kJ/mol H2) for the new molecule: {predicted_delta_H[0]}\")\n"
    ]
@@ -379,7 +318,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6678d653",
+   "id": "d279bd91",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46b5eb56",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce64bc2a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f12e138",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ea4de7f",
    "metadata": {},
    "outputs": [],
    "source": []
