--- a/Active_learning.ipynb
+++ b/Active_learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 74,
    "id": "851b5c42",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 75,
    "id": "29ec0753",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 62,
    "id": "dfb19bdf",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Initial split: 5% for initial training, 95% as unlabeled pool\n",
-    "initial_data, unlabeled_pool = train_test_split(df, test_size=0.95, random_state=42)\n",
+    "initial_data, unlabeled_pool = train_test_split(df, test_size=0.2, random_state=42)\n",
     "\n",
     "print(\"Initial training data size:\", initial_data.shape[0])\n",
     "print(\"Unlabeled pool size:\", unlabeled_pool.shape[0])\n"
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 76,
    "id": "aa38ea71",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 77,
    "id": "8262b554",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 95,
    "id": "9e02ee9c",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
     "from sklearn.gaussian_process.kernels import DotProduct, WhiteKernel\n",
     "\n",
     "# Split data into initial training set and unlabeled pool\n",
-    "initial_idx = np.random.choice(range(len(df)), size=970, replace=False)\n",
+    "initial_idx = np.random.choice(range(len(df)), size=500, replace=False)\n",
     "pool_idx = [i for i in range(len(df)) if i not in initial_idx]\n",
     "\n",
     "X = df.iloc[:, 5:].values  # Assuming descriptors start from the 5th column\n",
@@ -218,12 +218,100 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "24ac1699",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 1/50 complete. Training set size: 1000 | Test MSE: 967.2802\n",
+      "Iteration 2/50 complete. Training set size: 1400 | Test MSE: 956.0414\n",
+      "Iteration 3/50 complete. Training set size: 1800 | Test MSE: 920.9549\n",
+      "Iteration 4/50 complete. Training set size: 2200 | Test MSE: 898.9222\n",
+      "Iteration 5/50 complete. Training set size: 2600 | Test MSE: 859.9096\n",
+      "Iteration 6/50 complete. Training set size: 3000 | Test MSE: 845.8091\n",
+      "Iteration 7/50 complete. Training set size: 3400 | Test MSE: 821.0274\n",
+      "Iteration 8/50 complete. Training set size: 3800 | Test MSE: 798.2690\n",
+      "Iteration 9/50 complete. Training set size: 4200 | Test MSE: 782.3044\n",
+      "Iteration 10/50 complete. Training set size: 4600 | Test MSE: 768.7704\n",
+      "Iteration 11/50 complete. Training set size: 5000 | Test MSE: 754.6201\n",
+      "Iteration 12/50 complete. Training set size: 5400 | Test MSE: 740.5028\n",
+      "Iteration 13/50 complete. Training set size: 5800 | Test MSE: 731.4334\n",
+      "Iteration 14/50 complete. Training set size: 6200 | Test MSE: 719.1032\n",
+      "Iteration 15/50 complete. Training set size: 6600 | Test MSE: 713.7537\n",
+      "Iteration 16/50 complete. Training set size: 7000 | Test MSE: 705.5652\n",
+      "Iteration 17/50 complete. Training set size: 7400 | Test MSE: 697.8816\n",
+      "Iteration 18/50 complete. Training set size: 7800 | Test MSE: 690.5169\n",
+      "Iteration 19/50 complete. Training set size: 8200 | Test MSE: 684.5604\n",
+      "Iteration 20/50 complete. Training set size: 8600 | Test MSE: 678.4362\n",
+      "Iteration 21/50 complete. Training set size: 9000 | Test MSE: 674.1407\n",
+      "Iteration 22/50 complete. Training set size: 9400 | Test MSE: 671.0402\n",
+      "Iteration 23/50 complete. Training set size: 9800 | Test MSE: 666.0919\n",
+      "Iteration 24/50 complete. Training set size: 10200 | Test MSE: 661.9576\n",
+      "Iteration 25/50 complete. Training set size: 10600 | Test MSE: 657.4957\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Before active learning loop, split out a small test set\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state=42)\n",
+    "\n",
+    "# Modify your existing loop to also record performance on the test set\n",
+    "mse_test = []\n",
+    "\n",
+    "n_iterations = 50  # Existing value\n",
+    "n_to_add_each_iter = 400  # Existing value\n",
+    "\n",
+    "for i in range(n_iterations):\n",
+    "    # Existing code...\n",
+    "    gp.fit(X_initial, y_initial)\n",
+    "    predictions, std_dev = gp.predict(X_pool, return_std=True)\n",
+    "    uncertainty_idx = np.argsort(std_dev)[-n_to_add_each_iter:]\n",
+    "    X_initial = np.vstack([X_initial, X_pool[uncertainty_idx]])\n",
+    "    y_initial = np.hstack([y_initial, y_pool[uncertainty_idx]])\n",
+    "    X_pool = np.delete(X_pool, uncertainty_idx, axis=0)\n",
+    "    y_pool = np.delete(y_pool, uncertainty_idx)\n",
+    "\n",
+    "    # New code: Record the model's performance on the test set\n",
+    "    y_pred_test = gp.predict(X_test)\n",
+    "    mse = mean_squared_error(y_test, y_pred_test)\n",
+    "    mse_test.append(mse)\n",
+    "\n",
+    "    print(f\"Iteration {i+1}/{n_iterations} complete. Training set size: {len(y_initial)} | Test MSE: {mse:.4f}\")\n",
+    "\n",
+    "# After the loop, visualize the model's performance over iterations\n",
+    "plt.plot(range(n_iterations), mse_test, '-o')\n",
+    "plt.xlabel(\"Iteration\")\n",
+    "plt.ylabel(\"Mean Squared Error on Test Set\")\n",
+    "plt.title(\"Model Performance Over Iterations\")\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "id": "bfa454df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nn_iterations = 10  # You can change this to any desired number\\nn_to_add_each_iter = 100  # Number of points to add from the pool to training set in each iteration\\n\\nfor i in range(n_iterations):\\n    # Train Gaussian Process on current training data\\n    gp.fit(X_initial, y_initial)\\n\\n    # Predict on the unlabeled pool\\n    predictions, std_dev = gp.predict(X_pool, return_std=True)\\n\\n    # Select points where the model is least confident (highest standard deviation)\\n    uncertainty_idx = np.argsort(std_dev)[-n_to_add_each_iter:]\\n\\n    # Append the uncertain points to the training data\\n    X_initial = np.vstack([X_initial, X_pool[uncertainty_idx]])\\n    y_initial = np.hstack([y_initial, y_pool[uncertainty_idx]])\\n\\n    # Remove the uncertain points from the pool\\n    X_pool = np.delete(X_pool, uncertainty_idx, axis=0)\\n    y_pool = np.delete(y_pool, uncertainty_idx)\\n\\n    # Optionally, print progress\\n    print(f\"Iteration {i+1}/{n_iterations} complete. Training set size: {len(y_initial)}\")\\n\\nprint(\"Active learning process complete!\")\\n'"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "n_iterations = 20  # You can change this to any desired number\n",
-    "n_to_add_each_iter = 500  # Number of points to add from the pool to training set in each iteration\n",
+    "'''\n",
+    "n_iterations = 10  # You can change this to any desired number\n",
+    "n_to_add_each_iter = 100  # Number of points to add from the pool to training set in each iteration\n",
     "\n",
     "for i in range(n_iterations):\n",
     "    # Train Gaussian Process on current training data\n",
@@ -246,12 +334,13 @@
     "    # Optionally, print progress\n",
     "    print(f\"Iteration {i+1}/{n_iterations} complete. Training set size: {len(y_initial)}\")\n",
     "\n",
-    "print(\"Active learning process complete!\")\n"
+    "print(\"Active learning process complete!\")\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 89,
    "id": "bd9263be",
    "metadata": {},
    "outputs": [
@@ -259,7 +348,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted Hydrogenation Enthalpy (kJ/mol H2) for the new molecule: -73.11803639174408\n"
+      "Predicted Hydrogenation Enthalpy (kJ/mol H2) for the new molecule: 45.67651955256494\n"
      ]
     },
     {
@@ -274,7 +363,7 @@
    "source": [
     "# Cc1cc2ccccc2o1\n",
     "\n",
-    "new_molecule_smiles = \"Cc1ccccc1Cc1ccncc1\"  # Replace with your SMILES string\n",
+    "new_molecule_smiles = \"c1cnc2ccc(C3CC3)cc2c1\"  # Replace with your SMILES string\n",
     "\n",
     "# Convert to RDKit mol object\n",
     "new_mol = Chem.MolFromSmiles(new_molecule_smiles)\n",
